--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -19,6 +19,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: arduino/setup-protoc@v1
         with:
+          version: '3.21.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate buf
         run: make buf
