include camera component in sdk build (#39)
* include camera component in sdk build

* some more includes i need to build my minimalist camera project

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -85,8 +85,14 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/gen/common/v1/common.grpc.pb.h
     ${PROTO_GEN_DIR}/gen/common/v1/common.pb.cc
     ${PROTO_GEN_DIR}/gen/common/v1/common.pb.h
+    ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.grpc.pb.cc
+    ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.grpc.pb.h
+    ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.pb.cc
+    ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.pb.h
     ${PROTO_GEN_DIR}/gen/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/annotations.pb.h
+    ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.cc
+    ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.h
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.h
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.cc
@@ -151,8 +157,11 @@ target_sources(viamcpp
   PRIVATE
     ${PROTO_GEN_DIR}/gen/common/v1/common.grpc.pb.cc
     ${PROTO_GEN_DIR}/gen/common/v1/common.pb.cc
+    ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.grpc.pb.cc
+    ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.cc
+    ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.cc
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.cc
     common/proto_type.cpp
@@ -179,7 +188,10 @@ target_sources(viamcpp
     FILES
       ${PROTO_GEN_DIR}/gen/google/api/annotations.pb.h
       ${PROTO_GEN_DIR}/gen/google/api/http.pb.h
+      ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.h
       ${PROTO_GEN_DIR}/gen/common/v1/common.pb.h
+      ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.grpc.pb.h
+      ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.pb.h
       ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.h
       ${PROTO_GEN_DIR}/gen/robot/v1/robot.pb.h
 )
