make git merge happier

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Please try to keep this file as empty as possible,
+# and document what cannot be avoided.
+
+# Give users an ignored place to build
+/build/*
+
+# For now, ignore any viam_rust_utils library in the root.
+/libviam_rust_utils*
+
 # example binaries
 examples/dial/example_dial
 examples/echo/example_echo
