add more proto file linking to cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -97,12 +97,20 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.grpc.pb.h
     ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.pb.cc
     ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.pb.h
+    ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.grpc.pb.cc
+    ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.grpc.pb.h
+    ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.pb.cc
+    ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.pb.h
     ${PROTO_GEN_DIR}/gen/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/annotations.pb.h
     ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.h
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.h
+	${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.cc
+	${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.h
+	${PROTO_GEN_DIR}/gen/module/v1/module.pb.cc
+	${PROTO_GEN_DIR}/gen/module/v1/module.pb.h
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.cc
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.h
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.pb.cc
