get compiling with cmake, remove module client and manager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -310,6 +310,7 @@ target_link_libraries(viamcpp
   PUBLIC ${VIAMCPPSDK_PROTOBUF_LINK_LIBRARIES}
   PUBLIC Boost::headers
   PRIVATE Boost::log
+  PRIVATE gRPC::grpc++_reflection
   PRIVATE viam_rust_utils
 )
 
