address module PR comments

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -206,7 +206,6 @@ target_sources(viamcpp
     components/component_base.cpp
 	components/component_type.cpp
 	components/generic.cpp
-	components/resource_manager.cpp
 	config/resource.cpp
 	module/handler_map.cpp
 	module/module.cpp
@@ -214,6 +213,8 @@ target_sources(viamcpp
 	referenceframe/frame.cpp
 	resource/resource.cpp
 	resource/resource_base.cpp
+	resource/resource_manager.cpp
+	resource/resource_type.cpp
     robot/client.cpp
     rpc/dial.cpp
 	rpc/server.cpp
@@ -230,7 +231,6 @@ target_sources(viamcpp
       components/component_base.hpp
 	  components/component_type.hpp
 	  components/generic.hpp
-      components/resource_manager.hpp
       components/service_base.hpp
 	  config/resource.hpp
 	  module/handler_map.hpp
@@ -240,6 +240,8 @@ target_sources(viamcpp
       registry/registry.hpp
 	  resource/resource.hpp
       resource/resource_base.hpp
+      resource/resource_manager.hpp
+      resource/resource_type.hpp
       robot/client.hpp
       robot/service.hpp
       rpc/dial.hpp
