--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -205,7 +205,8 @@ target_sources(viamcpp
     common/utils.cpp
     components/component_base.cpp
     components/component_type.cpp
-    components/generic.cpp
+    components/generic/generic.cpp
+    components/generic/server.cpp
     config/resource.cpp
     module/handler_map.cpp
     module/module.cpp
@@ -213,6 +214,7 @@ target_sources(viamcpp
     referenceframe/frame.cpp
     resource/resource.cpp
     resource/resource_base.cpp
+    resource/resource_server_base.cpp
     resource/resource_manager.cpp
     resource/resource_type.cpp
     robot/client.cpp
@@ -230,7 +232,8 @@ target_sources(viamcpp
       common/utils.hpp
       components/component_base.hpp
       components/component_type.hpp
-      components/generic.hpp
+      components/generic/generic.hpp
+      components/generic/server.hpp
       components/service_base.hpp
       config/resource.hpp
       module/handler_map.hpp
@@ -240,6 +243,7 @@ target_sources(viamcpp
       registry/registry.hpp
       resource/resource.hpp
       resource/resource_base.hpp
+      resource/resource_server_base.hpp
       resource/resource_manager.hpp
       resource/resource_type.hpp
       robot/client.hpp
