--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,6 +297,7 @@ if (gRPC_FOUND)
 
   set(VIAMCPPSDK_GRPCXX_VERSION ${gRPC_VERSION})
   set(VIAMCPPSDK_GRPCXX_LIBRARIES gRPC::grpc++)
+  set(VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES gRPC::grpc++_reflection)
 else()
   message(WARNING "Failed to find gRPC with `find_package`; falling back to `pkg_check_modules`")
 
@@ -323,17 +324,16 @@ else()
   set(VIAMCPPSDK_GRPCXX_INCLUDE_DIRS ${GRPCXX_INCLUDE_DIRS})
   set(VIAMCPPSDK_GRPCXX_LIBRARY_DIRS ${GRPCXX_LIBRARY_DIRS})
   set(VIAMCPPSDK_GRPCXX_LIBRARIES ${GRPCXX_LIBRARIES})
-endif()
-
-set(grpc++_reflection_DIR ${gRPC_DIR})
-find_package(grpc++_reflection CONFIG)
-if (reflection_FOUND)
-  set(VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES gRPC::grpc++_reflection)
-else()
-  message(WARNING "Failed to find gRPC_reflection with `find_package`; falling back to `pkg_check_modules`")
-
-  include(FindPkgConfig)
-  set(VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES grpc++_reflection${GRPCXX_LIBRARIES})
+  
+  # We need to set the reflection library, which unfortunately does not 
+  # have a `.pc` file. To do so, we duplicate the `VIAMCPPSDK_GRPCXX_LIBRARIES` 
+  # value, assume its first element is the base dependency for GRPC, and 
+  # prepend our new list with a new value, equal to that base dependency plus 
+  # the `::grpc++_reflection` suffix for finding the reflection library.
+  list(GET VIAMCPPSDK_GRPCXX_LIBRARIES 0 VIAMCPPSDK_GRPC_ROOT)
+  set(VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES ${VIAMCPPSDK_GRPCXX_LIBRARIES})
+  set(VIAMCPPSDK_GRPC_REFLECTION_LIB ${VIAMCPPSDK_GRPC_ROOT}::grpc++_reflection)
+  list(PREPEND VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES VIAMCPPSDK_GRPC_REFLECTION_LIB)
 endif()
 
 # Pull in our subdirectories
