--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: lukka/get-cmake@latest
+      - uses: MarkusJx/install-boost@v2.4.4
+        with:
+          boost_version: 1.81.0
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
