--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: MarkusJx/install-boost@v2.4.4
         with:
           boost_version: 1.81.0
+          boost_install_dir: /home/runner/boost
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
