--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           boost_version: 1.81.0
           boost_install_dir: ${{github.workspace}}
-          platform-version: 22.04
+          platform_version: 22.04
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
