--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -14,13 +14,18 @@ jobs:
       image: ghcr.io/viamrobotics/canon:amd64
     steps:
       - uses: actions/checkout@v3
-      - name: boost
-        run: sudo apt-get update && sudo apt-get install -yq libboost1.81-dev
       - uses: MarkusJx/install-boost@v2.4.4
         with:
           boost_version: 1.81.0
           platform_version: 22.04
       - uses: lukka/get-cmake@latest
+      - name: Configure CMake
+        run: |
+            cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build\
+            -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
+            -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
+        env:
+            BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
