--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -33,8 +33,13 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate buf
-        run: cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON && cmake --build ./build --target update-static-protos
+        run: |
+            cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON\
+            -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
+            -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib\
+            && cmake --build ./build --target update-static-protos
         env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
           BUF_TOKEN: ${{ secrets.BUF_TOKEN }}
       - name: Add + Commit + Open PR
         uses: peter-evans/create-pull-request@v3
