--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -16,7 +16,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: MarkusJx/install-boost@v2.4.4
         with:
-          boost_version: 1.74.0
+          boost_version: 1.80.0
+          platform: linux
+          platform_version: 22.04
       - uses: lukka/get-cmake@latest
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
