--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -20,6 +20,9 @@ jobs:
           platform: linux
           platform_version: 22.04
       - uses: lukka/get-cmake@latest
+        with:
+          cmakeVersion: 3.25.2
+          ninjaVersion: 1.11.1
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
