--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -12,6 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+enable_testing()
+include(viamcppsdk_utils)
+viamcppsdk_add_boost_test(test_generic_component.cpp)
+
 add_executable(viam_cpp_sdk_tests
   test_generic_component.cpp
 )
@@ -20,7 +24,3 @@ target_link_libraries(viam_cpp_sdk_tests
   viamcpp
 )
 
-install(
-  TARGETS viam_cpp_sdk_tests
-  COMPONENT viam-cpp-sdk_tests
-)
