--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,15 @@ if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 endif()
 include(GNUInstallDirs)
 
+# Set the Cmake module path to include our cmake helper functions
+set(CMAKE_MODULE_PATH
+  ${CMAKE_MODULE_PATH}
+  ${PROJECT_SOURCE_DIR}/cmake
+)
+
+# Include our helper CMake functions
+include(viamcppsdk_utils)
+
 
 # Configure how the SDK will manage runtime paths. This is important
 # even for BUILD_SHARED_LIBS=OFF due to the always-shared
@@ -329,7 +338,6 @@ endif()
 # Pull in our subdirectories
 add_subdirectory(src)
 add_subdirectory(examples)
-add_subdirectory(tests)
 
 
 # Generate CMake configs to enable importing this project
@@ -378,31 +386,3 @@ add_custom_target(
   DEPENDS all
 )
 
-add_custom_target(
-  install-tests
-  COMMAND ${CMAKE_COMMAND} -DCOMPONENT=viam-cpp-sdk_tests -P ${CMAKE_BINARY_DIR}/cmake_install.cmake
-  DEPENDS all
-)
-
-enable_testing()
-function(add_boost_test SOURCE_FILE_NAME)
-  get_filename_component(TEST_EXECUTABLE_NAME ${SOURCE_FILE_NAME} NAME_WE)
-
-  add_executable(${TEST_EXECUTABLE_NAME} ${SOURCE_FILE_NAME})
-  target_link_libraries(${TEST_EXECUTABLE_NAME} viamcpp)
-
-  file(READ "${SOURCE_FILE_NAME}" SOURCE_FILE_CONTENTS)
-  string(
-    REGEX MATCHALL "BOOST_AUTO_TEST_CASE\\( *([A-Za-z_0-9]+) *\\)"
-    FOUND_TESTS ${SOURCE_FILE_CONTENTS})
-  
-  foreach(HIT ${FOUND_TESTS})
-    string(REGEX REPLACE ".*\\( *([A-Za-z_0-9]+) *\\).*" "\\1" TEST_NAME ${HIT})
-
-	add_test(
-      NAME "${TEST_EXECUTABLE_NAME}.${TEST_NAME}"
-	  COMMAND ${TEST_EXECUTABLE_NAME} --catch_system_error=yes)
-  endforeach()
-endfunction()
-
-add_boost_test(tests/test_generic_component.cpp)
