--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -25,7 +25,7 @@ jobs:
           ninjaVersion: 1.11.1
       - name: printoutput
         run: |
-           files=`find ${{ github.workspace }} -type f`
+           files=`find ${{ steps.install-boost.outputs.BOOST_ROOT }} -type f`
            echo $files
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
