--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -19,6 +19,9 @@ jobs:
           boost_version: 1.80.0
           platform: linux
           platform_version: 22.04
+      - uses: eWaterCycle/setup-grpc@v5
+        with:
+          grpc-version: 1.51.1
       - uses: lukka/get-cmake@latest
         with:
           cmakeVersion: 3.25.2
@@ -30,7 +33,7 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate buf
-        run: cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DCMAKE_PREFIX_PATH=${{ github.workspace }}/boost/boost && cmake --build ./build --target update-static-protos
+        run: cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON && cmake --build ./build --target update-static-protos
         env:
           BOOST_ROOT: ${{ github.workspace }}/boost/boost
           BUF_TOKEN: ${{ secrets.BUF_TOKEN }}
