--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -26,6 +26,8 @@ jobs:
       - uses: eWaterCycle/setup-grpc@v5
         with:
           grpc-version: 1.51.1
+        env:
+          path: $HOME
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
