--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           grpc-version: 1.51.1
         env:
-          path: $HOME
+          PATH: $HOME
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
