--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: eWaterCycle/setup-grpc@v5
         with:
           grpc-version: 1.51.1
+          path: ${{ github.workspace }}
         env:
           PATH: $HOME
       - uses: bufbuild/buf-setup-action@v1.9.0
