--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -24,7 +24,7 @@ jobs:
           cmakeVersion: 3.25.2
           ninjaVersion: 1.11.1
       - name: set-path
-        run: echo "PATH=${{ github.workspace }}:$GITHUB_PATH" >> ${GITHUB_ENV}
+        run: echo "path=${{ github.workspace }}:$GITHUB_PATH" >> ${GITHUB_ENV}
       - uses: eWaterCycle/setup-grpc@v5
         with:
           grpc-version: 1.51.1
