--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -23,6 +23,11 @@ jobs:
         with:
           cmakeVersion: 3.25.2
           ninjaVersion: 1.11.1
+      - uses: eWaterCycle/setup-grpc@v5
+        with:
+          grpc-version: 1.47.3
+        env:
+          PATH: ${{ github.workspace }}
       - name: setup-grpc-manual
         run: git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install grpc
       - name: set-path
