--- a/.github/workflows/set_reviewers.yml
+++ b/.github/workflows/set_reviewers.yml
@@ -2,6 +2,10 @@ name: Set Reviewers
 
 on:
   workflow_dispatch:
+  workflow_call:
+    secrets:
+        GIT_ACCESS_TOKEN:
+          required: true
   pull_request:
     branches:
       - main
