--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -14,8 +14,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Run linter
-        uses: github/super-linter@v4
+        uses: github/super-linter/slim@v4
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_CPP: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
